tests/src/frontend/syntax/invalid/function_modifiers.sk
base fun f(): void { void }

fun main(): String {
  "Fail"
}

